Updated README and added gallery of results